Refactor Player class to use record and update GamePlayService to access player properties